Introduce wm_splitter, better horizontal splits.
There are still several TODOs in the splitter with some hard-coded behavior,
but this is a significant step in window management.

Improved wm_window a little bit, as well (some extra data and utilities).

--- a/lib/wm/Makefile.am
+++ b/lib/wm/Makefile.am
@@ -6,7 +6,9 @@ libwm_a_SOURCES = \
     window.c \
     window.h \
     wm.c \
-    wm.h
+    wm.h \
+    wm_splitter.c \
+    wm_splitter.h
 
 # Installs the driver programs into progs directory
 noinst_PROGRAMS = wm_driver
