Fix libwm/automake dependency issue.
Passing libwm.a instead of -lwm forces wm_driver to be rebuilt if libwm
is modified, which is what needs to happen.  There might be a cleaner
solution, but this is how the other Makefiles work.

Also added types.h to SOURCES so that it gets picked up by make dist.

--- a/lib/wm/Makefile.am
+++ b/lib/wm/Makefile.am
@@ -8,13 +8,14 @@ libwm_a_SOURCES = \
     wm.c \
     wm.h \
     wm_splitter.c \
-    wm_splitter.h
+    wm_splitter.h \
+    types.h
 
 # Installs the driver programs into progs directory
 noinst_PROGRAMS = wm_driver
 
 # This is the wm driver
-wm_driver_LDFLAGS = -L. -L$(top_builddir)/lib/adt
-wm_driver_LDADD = -lwm -ladt
+wm_driver_LDFLAGS = -L$(top_builddir)/lib/adt
+wm_driver_LDADD = libwm.a -ladt
 wm_driver_SOURCES = wm_driver.c
 wm_driver_CFLAGS = $(AM_CFLAGS)
