--- a/lib/wm/Makefile.am
+++ b/lib/wm/Makefile.am
@@ -3,12 +3,12 @@ AM_CFLAGS = -I$(top_srcdir)/lib/adt
 # create the input library
 noinst_LIBRARIES = libwm.a
 libwm_a_SOURCES = \
-    window.c \
-    window.h \
     wm.c \
     wm.h \
     wm_splitter.c \
     wm_splitter.h \
+    wm_window.c \
+    wm_window.h \
     types.h
 
 # Installs the driver programs into progs directory
